Revision history for MsOffice-Word-Surgeon

1.07     27.10.2021
  - new method suppress_bookmarks()
  - fix bug : runs containing '0' should not be treated as empty
  - unlink_fields() must suppress the content of ASK fields
  - to_uppercase() must not change HTML entities like &amp;

1.06     16.01.2021
  - fix bug in ->plain_text() : translation of soft line breaks into newlines did not work

1.05     13.12.2020
  - new behaviour for the replace() method : by default it automatically cleans up the XML and automatically
    overwrites $surgeon->contents
  - additional noise reduction : remove the _goBack bookmark added automatically by MsWord

1.04     10.11.2020
  - the synopsis was incorrect in its example of the replace() method

1.03     13.10.2020
  - better parameter checking for new(); cleaner handling of revision ids; readability of source code improved  

1.02     12.10.2020
  - fix bug in ->replace(): tabs or other contents outside of <w:t> was lost during replacement

1.01     03.07.2020     
  - fix bug in "unlink_fields" : field boundaries ("begin" / "separate" / "end" ) may contain child nodes

1.0      24.11.2019
  - First public release