@@ -1,5 +1,7 @@
 Revision history for MsOffice-Word-Surgeon
 
+  - additional noise reduction : soft hyphens
+
 1.07     27.10.2021
   - new method suppress_bookmarks()
   - fix bug : runs containing '0' should not be treated as empty
